--- a/EventPlanner/src/app/homepage/sections/top-five-products-services/top-five-products-services.component.html
+++ b/EventPlanner/src/app/homepage/sections/top-five-products-services/top-five-products-services.component.html
@@ -26,7 +26,7 @@
           (click)="openDetails(service)">
         
         <img [src]="service.images[0]" alt="Service Image">
-        <h3>{{ service.title }}</h3>
+        <h3>{{ service.name }}</h3>
         <p>{{ service.description }}</p>
       </div>
     </ng-container>
