[ADD] Creating Service via Backend

--- a/EventPlanner/src/app/service-manager/edit-service/edit-service.component.html
+++ b/EventPlanner/src/app/service-manager/edit-service/edit-service.component.html
@@ -167,8 +167,8 @@
 
 			<mat-radio-group formControlName="reservationType" class="form-buttons">
 				<span>Reservation Type:</span>
-				<mat-radio-button value="auto">Auto</mat-radio-button>
-				<mat-radio-button value="manual">Manual</mat-radio-button>
+				<mat-radio-button value="AUTOMATIC">Auto</mat-radio-button>
+				<mat-radio-button value="MANUAL">Manual</mat-radio-button>
 			</mat-radio-group>
 		</div>
 
