--- a/EventPlanner/src/app/service-manager/create-service/create-service.component.html
+++ b/EventPlanner/src/app/service-manager/create-service/create-service.component.html
@@ -10,10 +10,10 @@
     </div>
 
     <mat-form-field appearance="fill" class="form-field">
-      <mat-label>Title</mat-label>
-      <input matInput type="text" formControlName="title" />
-      <mat-error *ngIf="createServiceForm.get('title')?.hasError('required')">
-        Title is required
+      <mat-label>Name</mat-label>
+      <input matInput type="text" formControlName="name" />
+      <mat-error *ngIf="createServiceForm.get('name')?.hasError('required')">
+        Name is required
       </mat-error>
     </mat-form-field>
 
@@ -52,52 +52,47 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field appearance="fill" class="form-field half-width">
+    <mat-form-field appearance="fill" class="form-field full-width">
       <mat-label>Event Type</mat-label>
-      <input
-        type="text"
-        matInput
-        formControlName="eventType"
-        [matAutocomplete]="eventTypeAuto"
-        (input)="filterEventTypes($event)"
-      />
-      <mat-autocomplete #eventTypeAuto="matAutocomplete">
-        <mat-option *ngFor="let option of filteredEventTypes" [value]="option">
+      <mat-select formControlName="eventTypes" multiple>
+        <mat-option *ngFor="let option of eventTypes" [value]="option">
           {{ option }}
         </mat-option>
-      </mat-autocomplete>
-      <mat-error *ngIf="createServiceForm.get('eventType')?.hasError('required')">
+      </mat-select>
+      <mat-error *ngIf="createServiceForm.get('eventTypes')?.hasError('required')">
         Event Type is required
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill" class="form-field">
+      <mat-label>Reservation Deadline (Days)</mat-label>
+      <input 
+        matInput 
+        type="number" 
+        formControlName="reservationDeadline" 
+        min="1"
+        placeholder="Enter number of days" />
+      <mat-error *ngIf="createServiceForm.get('reservationDeadline')?.hasError('required')">
+        Reservation Deadline is required
+      </mat-error>
+      <mat-error *ngIf="createServiceForm.get('reservationDeadline')?.hasError('min')">
+        Reservation Deadline must be at least 1 day.
       </mat-error>
     </mat-form-field>
     
     <mat-form-field appearance="fill" class="form-field">
-      <mat-label>Reservation Time</mat-label>
-      <input matInput [ngxMatTimepicker]="timePicker" formControlName="reservationTime" />
-      <ngx-mat-timepicker-toggle matSuffix [for]="timePicker"></ngx-mat-timepicker-toggle>
-      <ngx-mat-timepicker #timePicker></ngx-mat-timepicker>
-      <mat-error *ngIf="createServiceForm.get('reservationTime')?.hasError('required')">
-        Reservation Time is required
+      <mat-label>Cancellation Deadline (Days)</mat-label>
+      <input 
+        matInput 
+        type="number" 
+        formControlName="cancellationDeadline" 
+        min="1"
+        placeholder="Enter number of days" />
+      <mat-error *ngIf="createServiceForm.get('cancellationDeadline')?.hasError('required')">
+        Cancellation Deadline is required
       </mat-error>
-    </mat-form-field>
-
-    <mat-form-field appearance="fill" class="form-field">
-      <mat-label>Reservation Date</mat-label>
-      <input matInput [matDatepicker]="reservationPicker" formControlName="reservationDate" />
-      <mat-datepicker-toggle matSuffix [for]="reservationPicker"></mat-datepicker-toggle>
-      <mat-datepicker #reservationPicker></mat-datepicker>
-      <mat-error *ngIf="createServiceForm.get('reservationDate')?.hasError('required')">
-        Reservation Date is required
-      </mat-error>
-    </mat-form-field>
-
-    <mat-form-field appearance="fill" class="form-field">
-      <mat-label>Cantellation Date</mat-label>
-      <input matInput [matDatepicker]="cancellationPicker" formControlName="cancellationDate" />
-      <mat-datepicker-toggle matSuffix [for]="cancellationPicker"></mat-datepicker-toggle>
-      <mat-datepicker #cancellationPicker></mat-datepicker>
-      <mat-error *ngIf="createServiceForm.get('cancellationDate')?.hasError('required')">
-        Cancellation Date is required
+      <mat-error *ngIf="createServiceForm.get('cancellationDeadline')?.hasError('min')">
+        Cancellation Deadline must be at least 1 day.
       </mat-error>
     </mat-form-field>
 
@@ -120,7 +115,7 @@
           <mat-icon>add_photo_alternate</mat-icon>
         </label>
         <input
-          formControlName="selectedImages"
+          formControlName="images"
           type="file"
           id="imageUpload"
           (change)="onFileSelected($event)"
@@ -128,13 +123,13 @@
           hidden
         />
         <p>Upload Images</p>
-        <mat-error *ngIf="createServiceForm.get('selectedImages')?.hasError('minImages')">
+        <mat-error *ngIf="createServiceForm.get('images')?.hasError('minImages')">
           At least one image is required.
         </mat-error>
       </div>
 
-      <div class="image-preview" *ngIf="selectedImages.length > 0">
-        <div *ngFor="let image of selectedImages; let i = index" class="image-container">
+      <div class="image-preview" *ngIf="images.length > 0">
+        <div *ngFor="let image of images; let i = index" class="image-container">
           <img [src]="image" alt="Preview" />
           <button type="button" class="remove-button" (click)="removeImage(i)">
             <mat-icon>close</mat-icon>
@@ -154,8 +149,8 @@
       <div class="slider-container">
         <span class="pe-2">Min. Max. Engagement (In hours):</span>
         <mat-slider min="1" max="5" step="1" tickInterval="1" discrete>
-          <input matSliderStartThumb value="1" formControlName="engagement"/>
-          <input matSliderEndThumb value="2" formControlName="engagement"/>
+          <input matSliderStartThumb value="1" formControlName="minEngagement"/>
+          <input matSliderEndThumb value="2" formControlName="maxEngagement"/>
         </mat-slider>
       </div>
     </div>
@@ -163,13 +158,13 @@
     <div class="checkbox-stuff full-width form-field">
       <div class="checkboxes">
         <mat-checkbox formControlName="isVisible">Visible</mat-checkbox>
-        <mat-checkbox formControlName="isPublic">Public</mat-checkbox>
+        <mat-checkbox formControlName="isAvailable">Available</mat-checkbox>
       </div>
 
       <mat-radio-group formControlName="reservationType" class="form-buttons">
         <span>Reservation Type:</span>
-        <mat-radio-button value="auto">Auto</mat-radio-button>
-        <mat-radio-button value="manual">Manual</mat-radio-button>
+        <mat-radio-button value="AUTOMATIC">Auto</mat-radio-button>
+        <mat-radio-button value="MANUAL">Manual</mat-radio-button>
       </mat-radio-group>
     </div>
 
