--- a/EventPlanner/src/app/homepage/sections/top-five-products-services/top-five-products-services.component.html
+++ b/EventPlanner/src/app/homepage/sections/top-five-products-services/top-five-products-services.component.html
@@ -18,6 +18,9 @@
   </div>
 
   <button class="swiper-button-prev" (click)="prevItem()"></button>
+  <div *ngIf="!solutions?.length" class="no-solutions">
+    <p>No products/services available at the moment.</p>
+  </div>
   <button class="swiper-button-next" (click)="nextItem()"></button>
 
   <div class="bullets">
