--- a/EventPlanner/src/app/homepage/sections/top-five-events/top-five-events.component.css
+++ b/EventPlanner/src/app/homepage/sections/top-five-events/top-five-events.component.css
@@ -41,6 +41,14 @@
     opacity: 0.7;
 }
 
+.no-events {
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.2rem;
+    color: #ebebeb;
+    margin: 20px 0;
+  }
+
 h2, h3 {
     font-family: 'Merriweather', serif;
     color: #3f3f3f;
