--- a/EventPlanner/src/app/service-manager/services/services.component.html
+++ b/EventPlanner/src/app/service-manager/services/services.component.html
@@ -12,7 +12,7 @@
     </div>
     
     <div class="row justify-content-center">
-      <div *ngFor="let service of paginatedServices" class="col-lg-4 col-md-6 col-sm-12 mb-4 d-flex align-items-stretch">
+      <div *ngFor="let service of services" class="col-lg-4 col-md-6 col-sm-12 mb-4 d-flex align-items-stretch">
         <mat-card class="card shadow" (click)="goToServiceDetails(service.id)">
           <div class="service-settings">
             <button class="edit" (click)="editService($event, service.id)">
@@ -35,8 +35,8 @@
   </div>
 
   <mat-paginator
-    [length]="filteredServices.length"
-    [pageSize]="6"
+    [length]="totalElements"
+    [pageSize]="pageSize"
     [pageSizeOptions]="[3, 6, 9]"
     (page)="onPageChange($event)">
   </mat-paginator>
