--- a/EventPlanner/src/app/cards/service-card/service-card.component.html
+++ b/EventPlanner/src/app/cards/service-card/service-card.component.html
@@ -1,6 +1,6 @@
 <div class="service-card" (click)="onCardClick()">
     <div class="service-image">
-      <img [src]="service.images[0]" [alt]="service.name" />
+      <img [src]="service.cardImage" [alt]="service.name" />
     </div>
     <div class="service-info">
       <h3>{{ service.name }}</h3>
