--- a/EventPlanner/src/app/category-manager/edit-category/edit-category.component.html
+++ b/EventPlanner/src/app/category-manager/edit-category/edit-category.component.html
@@ -30,7 +30,9 @@
 
     <div class="modal-actions">
       <button mat-raised-button color="warn" type="button" (click)="onCancel()">Cancel</button>
-      <button mat-raised-button color="primary" type="submit">Save</button>
+      <button mat-raised-button color="primary" type="submit">
+        <mat-icon>save</mat-icon> Save
+      </button>
     </div>
   </form>
 </div>
