--- a/EventPlanner/src/app/event-type-manager/edit-event-type/edit-event-type.component.html
+++ b/EventPlanner/src/app/event-type-manager/edit-event-type/edit-event-type.component.html
@@ -1,9 +1,6 @@
 <div class="center-container">
-    <form [formGroup]="editEventTypeForm" class="event-type-form">
+    <form [formGroup]="editEventTypeForm" class="event-type-form" (ngSubmit)="update()">
       <div class="form-title">
-        <button type="button" class="close-button" [routerLink]="['/event-types']">
-          <mat-icon>close</mat-icon>
-        </button>
   
         <h2>Edit Event Type</h2>
       </div>
@@ -43,7 +40,7 @@
     </mat-form-field>
   
       <div class="form-buttons form-field">
-        <button [routerLink]="['/event-types']" mat-raised-button class="cancel">Cancel</button>
+        <button mat-raised-button class="cancel" (click)="cancel()">Cancel</button>
         <button mat-raised-button class="submit">Submit</button>
       </div>
     </form>
