[ADD] CRUD Budget Items via Backend

--- a/EventPlanner/src/app/budget-manager/budget-planning/budget-planning.component.css
+++ b/EventPlanner/src/app/budget-manager/budget-planning/budget-planning.component.css
@@ -66,7 +66,7 @@ mat-list-item:hover {
 .custom-add-icon {
   width: 20px;
   height: 20px;
-  background-image: url('../../assets/images/add.png');
+  background-image: url('../../../assets/images/add.png');
   background-size: cover;
   display: inline-block;
 }
@@ -128,7 +128,7 @@ input[type="number"] {
   align-items: center;
   width: 20px;
   height: 20px;
-  background-image: url('../../assets/images/info.png');
+  background-image: url('../../../assets/images/info.png');
   background-size: cover;
 }
 
@@ -138,7 +138,7 @@ input[type="number"] {
   align-items: center;
   width: 20px;
   height: 20px;
-  background-image: url('../../assets/images/edit.png');
+  background-image: url('../../../assets/images/edit.png');
   background-size: cover;
 }
 
