--- a/EventPlanner/src/app/shared/navbar/navbar.component.html
+++ b/EventPlanner/src/app/shared/navbar/navbar.component.html
@@ -47,7 +47,7 @@
       <mat-icon>category</mat-icon>
       Categories
     </a>
-    <a class="nav-item" routerLink="/invited-events" routerLinkActive="active" *ngIf="userRole === 'AUTHENTICATED_USER'">
+    <a class="nav-item" routerLink="/invited-events" routerLinkActive="active" *ngIf="isLoggedIn">
       <mat-icon>event_note</mat-icon>
       Invited Events
     </a>
