[ADD] Product Purchase Dialog

--- a/EventPlanner/src/app/details/product-details/product-details.component.html
+++ b/EventPlanner/src/app/details/product-details/product-details.component.html
@@ -65,7 +65,7 @@
     
     <div class="actions">
       <a>Visit Provider</a>
-      <button mat-button class="buy-btn">Buy Product
+      <button mat-button class="buy-btn" (click)="openBuyProductDialog()">Buy Product
         <mat-icon>
           shopping_cart
         </mat-icon>
