[ADD] Service Reservation with Availability Calendar ImplementedBind with Backend

--- a/EventPlanner/src/app/details/service-details/service-details.component.html
+++ b/EventPlanner/src/app/details/service-details/service-details.component.html
@@ -65,7 +65,7 @@
     
     <div class="actions">
       <a>Visit Provider</a>
-      <button mat-button class="buy-btn">Buy service
+      <button mat-button class="buy-btn" (click)="bookService(service.id)">Book a service
         <mat-icon>
           shopping_cart
         </mat-icon>
