--- a/EventPlanner/src/app/details/purchase-product-dialog/purchase-product-dialog.component.html
+++ b/EventPlanner/src/app/details/purchase-product-dialog/purchase-product-dialog.component.html
@@ -6,7 +6,7 @@
       <mat-form-field appearance="fill" style="width: 100%;">
         <mat-label>Event</mat-label>
         <mat-select [formControl]="eventControl">
-          <mat-option *ngFor="let event of events" [value]="event.name">{{ event.name }}</mat-option>
+          <mat-option *ngFor="let event of events" [value]="event">{{ event.name }}</mat-option>
         </mat-select>
         <mat-error *ngIf="eventControl.hasError('required')">Please select an event.</mat-error>
       </mat-form-field>
