[FEATURE] Dynamcally Reserving for Event Organizers using JWT Bind with Backend

--- a/EventPlanner/src/app/service-manager/service-reservation/service-reservation.component.html
+++ b/EventPlanner/src/app/service-manager/service-reservation/service-reservation.component.html
@@ -53,7 +53,7 @@
         {{ isReserving ? 'Creating Reservation...' : 'Book a Service' }}
       </button>
 
-      <a class="chat-link" [routerLink]="['/chat', serviceProviderId]">
+      <a class="chat-link" [routerLink]="['/chat', serviceProvider]">
         Chat with Service Provider
       </a>
 
